# pl-run-program

./: .coverage  README.md  pyproject.toml  release.sh
.github/workflows/: release.yml
copied/: README.md
src/pl_run_program/: __init__.py  program_at_path.py  run_program.py  run_simple_program.py
tests/: conftest.py  constants.py  program_at_path_test.py  run_program_test.py  run_simple_program_test.py
