[project]
name = "pl-run-program"
version = "0.0.21"
description = "A simple interface for running non-python programs in python."
readme = "README.md"
authors = [{ name = "Peter Lavigne" }]
requires-python = ">=3.14"
dependencies = []
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.urls]
Homepage = "https://github.com/Peter-Lavigne/pl-run-program"
Repository = "https://github.com/Peter-Lavigne/pl-run-program"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pyright>=1.1.408", "pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.15.2"]

[tool.ruff]
extend = "copied/pyproject.toml"

[tool.pyright]
typeCheckingMode = "strict"

[tool.coverage.run]
omit = [
    # Tests are not included in coverage.
    "src/*_test.py",
]
