[project]
name = "pl-run-program"
version = "0.0.27"
description = "A simple interface for running non-python programs in python."
readme = "README.md"
authors = [{ name = "Peter Lavigne" }]
requires-python = ">=3.12"
dependencies = []
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.urls]
Homepage = "https://github.com/Peter-Lavigne/pl-run-program"
Repository = "https://github.com/Peter-Lavigne/pl-run-program"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pl-ci-cd>=0.0.12"]

[tool.ruff]
extend = "copied/pyproject.toml"

[tool.pyright]
typeCheckingMode = "strict"

[tool.coverage.run]
omit = ["tests/*"]
